# tari-wallet

./: .gitignore  Cargo.toml  Makefile  build.rs  clippy.toml  lints.toml  pbcopy
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  deploy.yml
examples/wasm-new/: README.md  scanner-new.html  scanner.html  test-wasm-scanner.js
scripts/: get-protos.sh
src/: common.rs  errors.rs  hex_utils.rs  key_manager_builder.rs  lib.rs  wasm.rs
src/crypto/: hash_domain.rs  mod.rs  signing.rs
src/data_structures/: address.rs  block.rs  encrypted_data.rs  incompleted_scanned_output.rs  mod.rs  payment_id.rs  serialization_tests.rs  transaction.rs  transaction_input.rs  transaction_kernel.rs  transaction_output.rs  types.rs  wallet_output.rs  wallet_transaction.rs
src/events/: error_recovery.rs  integration_test_examples.rs  listener.rs  mod.rs  replay.rs  test_utils.rs  types.rs
src/events/listeners/: ascii_progress_bar.rs  console_logging.rs  database_storage.rs  mock_listener.rs  progress_tracking.rs
src/extraction/: batch_validation.rs  corruption_detection.rs  encrypted_data_decryption.rs  mod.rs  payment_id_extraction.rs  stealth_address_key_recovery.rs  wallet_output_reconstruction.rs
src/key_management/: key_derivation.rs  mod.rs  seed_phrase.rs  stealth_address.rs
src/scanning/: background_writer.rs  convert_output_features.rs  convert_transaction.rs  data_processor.rs  database_processor.rs  event_emitter.rs  grpc_scanner.rs  http_scanner.rs  interface.rs  mod.rs  new_wallet_scanner.rs  progress.rs  scan_config.rs  storage_manager.rs  wallet_scanner.rs
src/scanning/grpc/: scanner.rs
src/scanning/http/: mod.rs  models.rs  scanner.rs  wasm_scanner.rs
src/signing/: mod.rs  outgoing_tx_builder.rs
src/signing/models/: marshal_output_pair.rs  transaction_metadata.rs  types.rs
src/signing/prepare/: input_selector.rs  mod.rs  one_sided_transaction.rs  output_converter.rs
src/signing/util/: key_id.rs
src/storage/: connection_pool.rs  database_encryption.rs  event_storage.rs  mod.rs  performance_optimizations.rs  sqlite.rs  storage_trait.rs  stored_output.rs  wallet_transaction.rs
src/storage/key_manager/: imported_keys.rs  key_manager_state.rs  storage.rs  wrapper.rs
src/transaction_components/: mod.rs
src/validation/: commitment.rs  encrypted_data.rs  minimum_value_promise.rs  mod.rs  script_pattern.rs
src/wallet/: mod.rs
src/wasm/: key_manager.rs  mod.rs  types.rs  version.rs  wasm-old.rs  wasm_scanner.rs
tests/: cli_basic_tests.rs  cli_integration_tests.rs  event_listeners_integration.rs  stealth_address_integration.rs  storage_connection_tests.rs
tests/e2e/: full_system_integration.rs  performance_stress.rs
tests/integration/: multi_network_compatibility.rs  scanning_workflow.rs  transaction_workflow.rs  wallet_workflow.rs
