[package]
name = "lightweight_wallet_libs"
version = "0.2.0"
edition = "2024"
authors = ["The Tari Development Community"]
description = "Wallet libraries for Tari"
license = "BSD-3-Clause"
repository = "https://github.com/Krakaw/tari-wallet"
keywords = ["tari", "wallet", "cryptocurrency", "blockchain"]
categories = ["cryptography"]

[package.metadata.cargo-machete]
ignored = [
    "tonic-build", # Used in build.rs for GRPC code generation
    "prost",       # Used by generated GRPC protobuf code (verified by compilation test)
]

[dependencies]
# === Core Serialization & Error Handling ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# === Tari Ecosystem Dependencies ===
tari_common = { git = "https://github.com/tari-project/tari/", rev = "32df87fab620ae2ccd34d37aac9a7670351932d0" }
tari_common_types = { git = "https://github.com/tari-project/tari/", rev = "32df87fab620ae2ccd34d37aac9a7670351932d0" }
tari_crypto = { version = "0.22.1", features = ["borsh"] }
tari_utilities = { version = "0.8", features = ["std"] }
tari_script = { git = "https://github.com/tari-project/tari/", rev = "32df87fab620ae2ccd34d37aac9a7670351932d0" }
tari_transaction_components = { git = "https://github.com/tari-project/tari/", rev = "32df87fab620ae2ccd34d37aac9a7670351932d0" }
minotari_app_grpc = { git = "https://github.com/tari-project/tari/", rev = "32df87fab620ae2ccd34d37aac9a7670351932d0", optional = true, default-features = false }
tari_node_components = { git = "https://github.com/tari-project/tari/", rev = "32df87fab620ae2ccd34d37aac9a7670351932d0" }

# === Encoding & Utilities ===
primitive-types = { version = "0.12", features = ["serde"] } # U256, H256, etc.
# === WebAssembly Support ===
wasm-bindgen = "0.2"
# === Parallel Processing ===
num_cpus = "1.17.0"
rayon = { version = "1.11"}

# === Async & Concurrency ===
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"

# === Logging & Tracing ===
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
# === GRPC Dependencies (blockchain scanning) ===
tonic = { version = "0.13", features = ["tls-ring", "prost"], optional = true }

# === CLI Tools ===

anyhow = "1.0.99"
futures = "0.3.31"

# === Platform-Specific Dependencies ===
# Native targets (non-WASM) - Full reqwest with all features
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.22", features = [
    "json",
    "stream",
    "gzip",
], optional = true }

# WASM targets - Use web-sys instead of reqwest for HTTP functionality
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "console",
    "Request",
    "Response",
    "Headers",
    "RequestInit",
    "RequestMode",
    "Window",
    "Performance",
], optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.2", features = [
    "js",
] } # WASM-compatible random number generation
wasm-bindgen-futures = { version = "0.4", optional = true }



[features]
default = ["http"]
grpc = [
    "tonic",
    "tracing",
    "tracing-subscriber",
    "minotari_app_grpc",
]
http = [
    "tracing",
    "reqwest",
    "web-sys",
    "js-sys",
    "serde-wasm-bindgen",
    "wasm-bindgen-futures",
]
wasm = ["web-sys", "js-sys", "serde-wasm-bindgen", "wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib", "rlib"]